--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>დავდგეთ ძმა</h1>
+    <h1>დავდგეთ  ძმა am wels?
+        
+    </h1>
 </body>
 </html>
